<resources>
    <string name="app_name">RepoViewer</string>
    <string name="button_sign_in">Sign in</string>
    <string name="forks">forks</string>
    <string name="number_of_forks">Number of forks</string>
    <string name="number_of_stars">Number of stars</string>
    <string name="number_of_watchers">Number of watchers</string>
    <string name="license_label">License label</string>
    <string name="license">License</string>
    <string name="list_is_empty">The list of repositories is empty</string>
    <string name="logo">logo</string>
    <string name="readme_empty">The Readme.md file is empty</string>
    <string name="repository_name">Repository name</string>
    <string name="stars">stars</string>
    <string name="title_repositories">Repositories</string>
    <string name="type_the_token">Personal access token</string>
    <string name="value_not_entered">Enter your personal access token</string>
    <string name="value_invalid">Invalid token</string>
    <string name="watchers">watchers</string>
    <string name="without_a_license">without a license</string>
    <string name="zero">0</string>

    <string name="forbidden_error">Forbidden</string>
    <string name="internet_access_error">Check your internet connection</string>
    <string name="owner_name_is_null_or_blank">Owner name is null or blank</string>
    <string name="requires_authentication_error">Requires authentication</string>
    <string name="resource_not_found_error">Resource not found</string>
    <string name="unexpected_char">Unexpected char</string>
    <string name="unknown_error">Unknown error: %s</string>
    <string name="validation_failed_error">Validation failed, or the endpoint has been spammed</string>

    <string name="http_401_error">"HTTP 401 "</string>
    <string name="http_403_error">"HTTP 403 "</string>
    <string name="http_404_error">"HTTP 404 "</string>
    <string name="http_422_error">"HTTP 422 "</string>
</resources>