<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingStart="8dp"
    android:paddingTop="30dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp"
    tools:context=".presentation.AuthFragment">

    <TextView
        android:id="@+id/back_stack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:drawableEndCompat="@drawable/arrow_back_stack"
        app:layout_constraintBottom_toBottomOf="@id/sign_out"
        app:layout_constraintEnd_toStartOf="@id/repository_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/repository_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/sign_out"
        app:layout_constraintEnd_toStartOf="@id/sign_out"
        app:layout_constraintStart_toEndOf="@id/back_stack"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/repository_name" />

    <TextView
        android:id="@+id/sign_out"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        app:drawableEndCompat="@drawable/sign_out_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/repository_name"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/progress_bar_size"
        android:layout_height="@dimen/progress_bar_size"
        android:indeterminateTint="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_out">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inner_constraint_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_repo_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawablePadding="5dp"
                android:textColor="@color/blue"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/label_link_24"
                app:layout_constraintStart_toStartOf="@id/inner_constraint_layout"
                app:layout_constraintTop_toTopOf="@id/inner_constraint_layout"
                tools:text="github.com/username/repo" />

            <ImageView
                android:id="@+id/iv_license_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/license_label"
                android:src="@drawable/label_license_24"
                app:layout_constraintStart_toStartOf="@id/inner_constraint_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_repo_url" />

            <TextView
                android:id="@+id/tv_title_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:text="@string/license"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/iv_license_label"
                app:layout_constraintTop_toBottomOf="@id/tv_repo_url" />

            <TextView
                android:id="@+id/tv_license"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="24dp"
                android:gravity="end"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/inner_constraint_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_repo_url"
                tools:text="Apache-2.0" />

            <ImageView
                android:id="@+id/iv_label_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/number_of_stars"
                android:src="@drawable/label_star_24"
                app:layout_constraintStart_toStartOf="@id/inner_constraint_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_license" />

            <TextView
                android:id="@+id/tv_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="30dp"
                android:text="@string/zero"
                android:textColor="@color/yellow_star"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/iv_label_stars"
                app:layout_constraintTop_toBottomOf="@id/tv_license"
                tools:text="259" />

            <TextView
                android:id="@+id/tv_title_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="30dp"
                android:text="@string/stars"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_stars"
                app:layout_constraintTop_toBottomOf="@id/tv_license" />

            <ImageView
                android:id="@+id/iv_label_forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/number_of_forks"
                android:src="@drawable/label_forks_24"
                app:layout_constraintStart_toEndOf="@id/tv_title_stars"
                app:layout_constraintTop_toBottomOf="@id/tv_license" />

            <TextView
                android:id="@+id/tv_forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="30dp"
                android:text="@string/zero"
                android:textColor="@color/green_forks_label"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/iv_label_forks"
                app:layout_constraintTop_toBottomOf="@id/tv_license"
                tools:text="30" />

            <TextView
                android:id="@+id/tv_title_forks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="30dp"
                android:text="@string/forks"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_forks"
                app:layout_constraintTop_toBottomOf="@id/tv_license" />

            <ImageView
                android:id="@+id/iv_label_watchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/number_of_watchers"
                android:src="@drawable/label_watchers_24"
                app:layout_constraintStart_toEndOf="@id/tv_title_forks"
                app:layout_constraintTop_toBottomOf="@id/tv_license" />

            <TextView
                android:id="@+id/tv_watchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="30dp"
                android:text="@string/zero"
                android:textColor="@color/teal_watchers_label"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/iv_label_watchers"
                app:layout_constraintTop_toBottomOf="@id/tv_license"
                tools:text="10" />

            <TextView
                android:id="@+id/tv_title_watchers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="30dp"
                android:text="@string/watchers"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/tv_watchers"
                app:layout_constraintTop_toBottomOf="@id/tv_license" />

            <TextView
                android:id="@+id/tv_readme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:autoLink="all"
                android:linksClickable="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/inner_constraint_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_title_watchers"
                tools:text="README file" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>